@@ -1,6 +1,5 @@
 package io.getstream.chat.android.client.api.models
 
-import com.google.gson.annotations.SerializedName
 import io.getstream.chat.android.client.models.Channel
 import io.getstream.chat.android.client.models.ChannelUserRead
 import io.getstream.chat.android.client.models.Member
@@ -12,16 +11,9 @@ data class ChannelResponse(
     val channel: Channel,
     val messages: List<Message>? = null,
     var members: List<Member>? = null,
-    var watchers: List<WatcherResponse>? = null,
+    var watchers: List<User>? = null,
     var read: List<ChannelUserRead>? = null,
     val watcher_count: Int = 0,
     val hidden: Boolean? = null,
     val hide_messages_before: Date? = null
-)
-
-data class WatcherResponse(
-    val id: String,
-    val user: User?,
-    @SerializedName("created_at")
-    val createdAt: Date?
 )
