@@ -1,5 +1,7 @@
 # To be released:
 
+- `ChannelResponse.watchers` is an array of User now
+
 # 1.15.1 - Thu 28 Aug 2020
 
 - New MapAdapter that omit key that contains null values or emptyMaps
